--- a/less/tab/player-combat.less
+++ b/less/tab/player-combat.less
@@ -39,7 +39,7 @@
                         flex-grow: 1;
                         .bonus-text{
                             background: @clear-background;
-                            border: 1px solid rgb(146, 142, 142);
+                            border: 1px solid @border-color-combat-bonus;
                             border-radius: 5px;
                             width: 10%;
                             text-align: center;
