--- a/less/tab/player-notes.less
+++ b/less/tab/player-notes.less
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     margin: 1em;
+    font-family: @long-text-font;
+    font-size: @long-text-font-size;
     
   .editor{
     min-height: @editor-height;
