--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -3,6 +3,7 @@
         background: @playersheet-background;
         background-color: @clear-background;
         font-family: @default-font;
+        font-size: @default-font-size;
         background-size: 250px 100%;
     }
     textarea {
@@ -40,7 +41,7 @@
             display: flex;
             flex-direction: column;
             min-width: 200px;
-            margin-right: 20px;
+            margin-right: 50px;
             .title-line{
                 display: flex;
                 flex-direction: row;
@@ -60,7 +61,7 @@
                     }
                     .skill-value{
                         background: @clear-background;
-                        border: 1px solid rgb(146, 142, 142);
+                        border: 1px solid @border-color-skill;
                         border-radius: 5px;
                         width: 10%;
                         text-align: center;
@@ -96,12 +97,16 @@
                         justify-content: space-between;}
                     .central-line{
                         font-family: @default-font;
-                        font-size: 1rem;
+                        font-size: 1em;
                         font-weight: bold;
                         display: flex;
                         flex-flow: row nowrap;
                         margin: 0.5em;
                         white-space: nowrap;
+                        .activity-text{
+                            font-family: @long-text-font;
+                            font-size: @long-text-font-size;
+                        }
                         .input-heroism{
                             display: flex;
                             flex-direction: row;
@@ -115,7 +120,7 @@
                         .central-text{
                             margin: 0.3em .2em 0 .1em;
                         }
-                        .name-text, .blessure-text, .heroism-text, .health-text{
+                        .name-text, .blessure-text, .heroism-text, .health-text, .activity-text{
                             margin: 0.3em .3em 0 .3em;
                         }
                         .activity-text{
