--- a/less/tab/player-boons.less
+++ b/less/tab/player-boons.less
@@ -14,10 +14,10 @@
             width: 50%;
             padding: 1em 0.5em 0 0.5em;
             .boon-name-line{
-                font-size: 1rem;
                 height: fit-content;
                 .boon-name{
                     color: @boon-color;
+                    font-size: @boon-name-size;
                 }
             }
             .boon-description{
@@ -25,6 +25,8 @@
                 padding: 0.5em;
                 box-shadow: inset 0 0 3px black;
                 color: @font-color-booncard;
+                font-family: @long-text-font;
+                font-size: @long-text-font-size;
             }
             .icon-group{
                 margin-left: auto;
