--- a/less/tab/player-equipment.less
+++ b/less/tab/player-equipment.less
@@ -21,6 +21,10 @@
             justify-content: left;
             margin: 0.3em 0.3em 0 0.3em;
             border-bottom: 1px solid @title-color;
+            .equipment-name{
+                font-family: @long-text-font;
+                font-size: @long-text-font-size;
+            }
             .icon-group{
                 margin-left: auto;
             }
