--- a/less/chat/rollResult.less
+++ b/less/chat/rollResult.less
@@ -3,7 +3,7 @@
     background-color: @clear-background;
     display: flex;
     flex-direction: column;
-    font-family: @default-font;
+    font: @default-font;
     color:@chat-introtext;
     .intro{
         .introImg {
