--- a/less/config.less
+++ b/less/config.less
@@ -22,6 +22,11 @@
 @long-text-font: "Merriweather";
 @long-text-font-size: 0.7rem;
 @boon-name-size: 1.2rem;
+@combat-table-title-font: "Modesto condensed";
+@combat-table-title-font-size: 1rem;
+@combat-table-font: "Signika";
+@combat-table-font-size: 0.9rem;
+@combat-table-font-weight: lighter;
 
 h1 {
     font-family: "Signika";
