--- a/less/chat/rollDialog.less
+++ b/less/chat/rollDialog.less
@@ -2,7 +2,7 @@
     background-color: @clear-background;
     display: flex;
     flex-direction: column;
-    font-family: @default-font;
+    font: @default-font;
     .intro{
         display: flex;
         flex-direction: row;
