--- a/less/tab/player-combat.less
+++ b/less/tab/player-combat.less
@@ -25,7 +25,7 @@
                         flex-direction: row;
                         flex-grow: 1;
                         .trainings-name{
-                            margin: 0 1em 0 0;
+                            margin: 0 1em 0 .2em;
                         }
                     }
                 }
@@ -45,6 +45,17 @@
                             text-align: center;
 
                         }
+                    }
+                }
+                .items{
+                    thead{
+                        font-family: @combat-table-title-font;
+                        font-size: @combat-table-title-font-size;
+                    }
+                    .item{
+                        font-family: @combat-table-font;
+                        font-size: @combat-table-font-size;
+                        font-weight: @combat-table-font-weight;
                     }
                 }
                 .combat-group-label{
