gulp for modules

--- a/less/cleenmain.less
+++ b/less/cleenmain.less
@@ -1,15 +1,15 @@
 @import "./config.less";
-@import "./player-sheet.less";
-@import "./npc-sheet.less";
-@import "./boon-card.less";
-@import "./item-sheet.less";
-@import "./boon-sheet.less";
-@import "./weapon-sheet.less";
-@import "./tab/player-boons.less";
-@import "./tab/player-bio.less";
-@import "./tab/player-combat.less";
-@import "./tab/player-notes.less";
-@import "./tab/player-equipment.less";
+@import "../../../systems/cleenmain/less/player-sheet.less";
+@import "../../../systems/cleenmain/less/npc-sheet.less";
+@import "../../../systems/cleenmain/less/boon-card.less";
+@import "../../../systems/cleenmain/less/item-sheet.less";
+@import "../../../systems/cleenmain/less/boon-sheet.less";
+@import "../../../systems/cleenmain/less/weapon-sheet.less";
+@import "../../../systems/cleenmain/less/tab/player-boons.less";
+@import "../../../systems/cleenmain/less/tab/player-bio.less";
+@import "../../../systems/cleenmain/less/tab/player-combat.less";
+@import "../../../systems/cleenmain/less/tab/player-notes.less";
+@import "../../../systems/cleenmain/less/tab/player-equipment.less";
 
-@import "./chat/rollDialog.less";
-@import "./chat/rollResult.less";
+@import "../../../systems/cleenmain/less/chat/rollDialog.less";
+@import "../../../systems/cleenmain/less/chat/rollResult.less";
