--- a/less/config.less
+++ b/less/config.less
@@ -28,6 +28,13 @@
 @combat-table-font-size: 0.9rem;
 @combat-table-font-weight: lighter;
 
+@npc-combat-line-font: "Signika";
+@npc-combat-line-font-size: 1.2rem;
+@npc-combat-line-font-color: black;
+@npc-skill-font: "Modesto condensed";
+@npc-skill-font-size: 1.2rem;
+@npc-skill-font-color: black;
+
 h1 {
     font-family: "Signika";
     font-size: 1.2rem;
