--- a/templates/chat/rolldialog.html
+++ b/templates/chat/rolldialog.html
@@ -3,7 +3,9 @@
     <div class="introImg" style="background-image: url('{{actingCharImg}}')"></div>
     <div class="introtext">{{introText}}</div>
   </div>
+  <div class="tooltip">
   <div class="formula">{{rollFormula}}</div>
+    <span class="tooltiptext">{{formulaTooltip}}</span></div>
 
   <div class="rollmodifier">
     <label>{{localize "CLEENMAIN.dialog.rollmodifier"}}</label><input id="rollmodifier" value="" type="text" data-dtype="Text"/>
