--- a/less/chat/rollDialog.less
+++ b/less/chat/rollDialog.less
@@ -2,7 +2,30 @@
     background-color: @clear-background;
     display: flex;
     flex-direction: column;
-    font: @default-font;
+    font-family: @default-font;
+    .tooltip {
+    position: relative;
+    display: inline-block;
+    }
+    /* Tooltip text */
+    .tooltip .tooltiptext {
+        visibility: hidden;
+        width: 160px;
+        background-color: black;
+        color: #fff;
+        text-align: center;
+        padding: 5px 0;
+        border-radius: 6px;
+    
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        z-index: 1;
+    }
+    
+    .tooltip:hover .tooltiptext {
+        visibility: visible;
+    }
     .intro{
         display: flex;
         flex-direction: row;
@@ -51,29 +74,6 @@
         input{
             width: 3em;
             -webkit-appearance: auto;
-        }
-        .tooltip {
-        position: relative;
-        display: inline-block;
-        }
-        /* Tooltip text */
-        .tooltip .tooltiptext {
-            visibility: hidden;
-            width: 160px;
-            background-color: black;
-            color: #fff;
-            text-align: center;
-            padding: 5px 0;
-            border-radius: 6px;
-        
-            position: absolute;
-            right: 20px;
-            top: 20px;
-            z-index: 1;
-        }
-        
-        .tooltip:hover .tooltiptext {
-            visibility: visible;
         }
     }
     .paddingend{
